# PoetryProject

./: .pylintrc  Makefile  README.md  pycli.toml  pyproject.toml
bigcli/: __init__.py  _main.py  cli_build.py  cli_check.py  cli_cli4.py  cli_cli5.py  cli_deploy.py  cli_env.py  cli_path.py
cli1/: _main.py
cli2/: _main.py
cli3/: _main.py
examplecli/: _main.py
tests/: test_build.py  test_check.py  test_check2.py  test_deploy.py  test_env.py  test_main.py  test_path.py
