[tool.poetry]
name = "cmsc475-202320-final"
version = "0.1.0"
description = "CLI template using click and loguru"
authors = ["John Leonard <john@lowkeylabs.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include="bigcli"},
    {include="examplecli"},
    {include="cli1"},
    {include="cli2"},
    {include="cli3"}
]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
click = "^8.1.3"
tomlkit = "^0.11.6"
pylint = "^2.15.9"
xdg = "^5.1.1"
argparse = "^1.4.0"
attrdict = "^2.0.1"
pathlib = "^1.0.1"
click-config-file = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-mock = "*"
coverage = {extras = ["toml"], version = "^6.5.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bigcli = "bigcli:_main.cli"
examplecli = "examplecli:_main.cli"
cli1 = "cli1:_main.cli"
cli2 = "cli2:_main.cli"
cli3 ="cli3:_main.cli"


[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 100

